<resources>
    <string name="app_name">winniemutanu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">Home</string>

    <string name="txtpassword">My Password</string>
    <string name="txtusername">My Username</string>
    <string name="button_text">Login</string>
    <string name="text_button">Create Account</string>
    <string name="txtfname">First Name</string>
    <string name="txtlname">Last Name</string>
    <string name="txtemail">Email address</string>
    <string name="txtphone">Phone Number</string>
    <string name="txtwelcome">Welcome to your homepage</string>



</resources>
