<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:id="@+id/Username"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtusername"
        android:layout_alignParentLeft="true"

        />
    <EditText
        android:id="@+id/Password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/txtpassword"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/Login"
        android:layout_width="200dp"
        android:text="@string/button_text"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerInParent="true"

        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/Sign"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="Don't have an account? Signup"
        android:layout_below="@+id/Login"
        />


    <Button
        android:id="@+id/Createaccount"
        android:layout_width="200dp"
        android:text="@string/text_button"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sign"
        android:layout_centerInParent="true"/>


</RelativeLayout>